--- a/assets/front/scss/base/_utilities.scss
+++ b/assets/front/scss/base/_utilities.scss
@@ -146,3 +146,18 @@
   }
 }
 
+.alignleft {
+  float: left;
+  margin: 0.375em 1.75em 1.75em 0;
+}
+
+.alignright {
+  float: right;
+  margin: 0.375em 0 1.75em 1.75em;
+}
+
+.aligncenter {
+  clear: both;
+  display: block;
+  margin: 0 auto 1.75em;
+}
